<resources>
    <string name="app_name">HikeBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">Home</string>
    <string name="main_screen_image">main screen image</string>
    <string name="visitor">Visiting</string>
    <string name="resident">Popularity</string>
    <string name="favorites">Favorites</string>
    <string name="distance">Distance</string>
    <string name="difficulty">Difficulty</string>
    <string name="information">Information</string>
    <string name="search">Search Trail</string>
    <string name="todo">TODO</string>
    <string name="milestones">Milestones</string>
    <string name="textview">custom_text</string>
    <string name="no_results_found">No results found</string>
    <string name="test">test</string>
    <string name="tohome">Back to Home</string>
    <string name="hiking_gear_checklist">Hiking Gear Checklist</string>
    <string name="filter_by">Filter by</string>
    <string name="view_all">View All</string>
    <string name="sort_hikes_by">Sort Hikes By:</string>
    <string name="swipe_to_view">Swipe to View</string>
    <string-array name="hike_names">
        <item>Koko Head</item>
        <item>Manoa Falls</item>
        <item>Makapuu Lighthouse</item>
        <item>Lanikai Pillboxes</item>
        <item>Maunawili Falls</item>
        <item>Stairway to Heaven</item>
    </string-array>
    <string-array name="hike_info">
        <item>Hike Difficulty: Hard

            \n\n\tThe Koko Head Stairs, or Koko Crater Trail, is a long uphill hike that takes you to the top of the Koko Crater, a 1208ft high volcanic tuff cone.
            \n\t\tThe stairs are actually old railroad tracks that go up the Crater.
            \n\t\tThere are a total of 1050 of these tracks!
            \n\t\tWatch out for the bridge section of the hike, where the tracks act as a bridge over a 40ft drop.
            \n\t\tThe hike is short, ranging from 30min to 1hour but can be quite tiresome, be sure you stretch your knees!</item>
        <item>Hike Difficulty: Medium

                \n\n\tManoa Falls trail is a short 1.7 mile hike through Manoa valley that leads to a large 150ft waterfall.
                \n\t\tA popular tourist hike, Manoa Falls has been featured in many movies and TV shows including, Jurassic Park, Hunger Games, and Lost.
                \n\t\tAfter periods of rain the hike can be extremely muddy and slippery so pay attention to weather forecasts.
                \n\t\tDo not attempt to hike around and climb to the top of the waterfall as it can be very dangerous.
        </item>
        <item>Hike Difficulty: Easy

                \n\n\tThe Makapu\'u Lightshouse trail is an easy cement paved trail that traces along Oahu\'s southeastern coastline.
                \n\t\tThe trail is out in the open with no cover and can be quite sunny, but has an amazing view of the ocean.
                \n\t\tA great hike for kids or families, you can even push a stroller up the trail. Leashed pets are allowed.
                \n\t\tIt is a short 2 miles round trip trail that takes you to a lighthouse built in 1909, it has the largest light of any lighthouse in the entire USA.
        </item>
        <item>Hike Difficulty: Medium

                \n\n\tThe Lanikai Pillboxes, or Kaiwa Ridge Trail is a short but steep uphill hike that leads you to an old military pillbox.
                \n\t\tThe trail is 1.4 miles and can be quite rocky at points, there are no guardrails so it can be difficult for children.
                \n\t\tThe top of the ridge provides a great viewpoint, letting you see many island attractions including, Kaneohe Bay, Chinaman\'s Hat, Waimanalo Bay, and the Makapu\'u Lighthouse.
                \n\t\tThe hike can be quite popular so be prepared to meet other people on the trail.
        </item>
        <item>Hike Difficulty: Medium

                \n\t\tThe Maunawili Falls is a valley hike, taking you through the forest and across streams to reach a small 20ft waterfall.
                \n\t\tThe hike is 2.5 miles but has both uphill and downhill sections.
                \n\t\tAfter periods of rain the hike can be extremely muddy and slippery so pay attention to weather forecasts.
                \n\t\tYou can swim in the pool and even jump off the top of the waterfall, but be safe!
        </item>
        <item>Hike Difficulty: Hard

                \n\n\tThe Stairway to Heaven or Haiku Stairs is one of the most well known hikes on Oahu.
                \n\t\tIt is a staircase with 3922 steps built in 1942 that ascends Ko\'olau Mountain.
                \n\t\tThe main entrance to this hike has been blocked due to damage to the stairs, going this route is currently ILLEGAL and has a $1000 fine.
                \n\t\tTo do this hike legally you must go along Moanalua Trail until you reach the top of the ridge, this will put you at the top of the stairway from the back. Do not descend the stairway as this will take you to the illegal entrance, return back down the mountain using the same Moanalua trail.
                \n\t\tIf done during sunrise or sunset this hike has some of the most beautiful views Oahu has to offer.
        </item>
    </string-array>
    <string-array name="hike_gear">
        <item>Sunscreen Hiking-Boots Hat Water</item>
        <item>Hiking-Boots Water Bug-Repellent</item>
        <item>Sunscreen Hat Water</item>
        <item>Hiking-Boots Sunscreen Camera</item>
        <item>Hiking-Boots Swimsuit Water Bug-Repellent</item>
        <item>Hiking-Boots Jacket Camera Headlamp</item>
    </string-array>
    <string-array name="hike_distance">
        <item>1.4 miles</item>
        <item>1.5 miles</item>
        <item>2 miles</item>
        <item>1.5 mile</item>
        <item>3.2 miles</item>
        <item>4.5 miles</item>
    </string-array>
    <string-array name="hike_elevation">
        <item>990 ft</item>
        <item>600 ft</item>
        <item>300 ft</item>
        <item>650 ft</item>
        <item>430 ft</item>
        <item>2480 ft</item>
    </string-array>
    <string-array name="hike_terrain">
        <item>Stairs</item>
        <item>Dirt Trail, Muddy</item>
        <item>Paved Path</item>
        <item>Dirt Trail</item>
        <item>Dirt Trail, Muddy</item>
        <item>Dirt Trail, Stairs</item>
    </string-array>
    <string-array name="vis_hike_names">
        <item>Lanikai Pillboxes</item>
        <item>Maunawili Falls</item>
        <item>Stairway to Heaven</item>
    </string-array>
    <string-array name="vis_hike_info">
        <item>Hike Difficulty: Medium

                \n\n\tThe Lanikai Pillboxes, or Kaiwa Ridge Trail is a short but steep uphill hike that leads you to an old military pillbox.
                \n\t\tThe trail is 1.4 miles and can be quite rocky at points, there are no guardrails so it can be difficult for children.
                \n\t\tThe top of the ridge provides a great viewpoint, letting you see many island attractions including, Kaneohe Bay, Chinaman\'s Hat, Waimanalo Bay, and the Makapu\'u Lighthouse.
                \n\t\tThe hike can be quite popular so be prepared to meet other people on the trail.
        </item>
        <item>Hike Difficulty: Medium

                \n\t\tThe Maunawili Falls is a valley hike, taking you through the forest and across streams to reach a small 20ft waterfall.
                \n\t\tThe hike is 2.5 miles but has both uphill and downhill sections.
                \n\t\tAfter periods of rain the hike can be extremely muddy and slippery so pay attention to weather forecasts.
                \n\t\tYou can swim in the pool and even jump off the top of the waterfall, but be safe!
        </item>
        <item>Hike Difficulty: Hard

                \n\n\tThe Stairway to Heaven or Haiku Stairs is one of the most well known hikes on Oahu.
                \n\t\tIt is a staircase with 3922 steps built in 1942 that ascends Ko\'olau Mountain.
                \n\t\tThe main entrance to this hike has been blocked due to damage to the stairs, going this route is currently ILLEGAL and has a $1000 fine.
                \n\t\tTo do this hike legally you must go along Moanalua Trail until you reach the top of the ridge, this will put you at the top of the stairway from the back. Do not descend the stairway as this will take you to the illegal entrance, return back down the mountain using the same Moanalua trail.
                \n\t\tIf done during sunrise or sunset this hike has some of the most beautiful views Oahu has to offer.
        </item>
    </string-array>
    <string-array name="vis_gear">
        <item>Hiking-Boots Sunscreen </item>
        <item>Hiking-Boots Water-Bottles Bug-Repellent</item>
        <item>Hiking-Boots Jacket  Headlamp</item>
    </string-array>
    <string-array name="vis_distance">
        <item>1.5 miles</item>
        <item>3.2 miles</item>
        <item>4.5 miles</item>
    </string-array>
    <string-array name="vis_elevation">
        <item>650 ft</item>
        <item>430 ft</item>
        <item>2480 ft</item>
    </string-array>
    <string-array name="vis_terrain">
        <item>Dirt Trail</item>
        <item>Dirt Trail, Muddy</item>
        <item>Dirt Trail, Stairs</item>
    </string-array>
    <string-array name="res_hike_names">
        <item>Koko Head</item>
        <item>Manoa Falls</item>
        <item>Makapuu Lighthouse</item>
    </string-array>
    <string-array name="res_hike_info">
        <item>Hike Difficulty: Hard

            \n\n\tThe Koko Head Stairs, or Koko Crater Trail, is a long uphill hike that takes you to the top of the Koko Crater, a 1208ft high volcanic tuff cone.
            \n\t\tThe stairs are actually old railroad tracks that go up the Crater.
            \n\t\tThere are a total of 1050 of these tracks!
            \n\t\tWatch out for the bridge section of the hike, where the tracks act as a bridge over a 40ft drop.
            \n\t\tThe hike is short, ranging from 30min to 1hour but can be quite tiresome, be sure you stretch your knees!</item>
        <item>Hike Difficulty: Medium

                \n\n\tManoa Falls trail is a short 1.7 mile hike through Manoa valley that leads to a large 150ft waterfall.
                \n\t\tA popular tourist hike, Manoa Falls has been featured in many movies and TV shows including, Jurassic Park, Hunger Games, and Lost.
                \n\t\tAfter periods of rain the hike can be extremely muddy and slippery so pay attention to weather forecasts.
                \n\t\tDo not attempt to hike around and climb to the top of the waterfall as it can be very dangerous.
        </item>
        <item>Hike Difficulty: Easy

                \n\n\tThe Makapu\'u Lightshouse trail is an easy cement paved trail that traces along Oahu\'s southeastern coastline.
                \n\t\tThe trail is out in the open with no cover and can be quite sunny, but has an amazing view of the ocean.
                \n\t\tA great hike for kids or families, you can even push a stroller up the trail. Leashed pets are allowed.
                \n\t\tIt is a short 2 miles round trip trail that takes you to a lighthouse built in 1909, it has the largest light of any lighthouse in the entire USA.
        </item>
    </string-array>
    <string-array name="res_gear">
        <item>Sunscreen Hiking-Boots Hat Water-Bottles</item>
        <item>Hiking-Boots Water Bug-Repellent</item>
        <item>Sunscreen Hat Water-Bottles</item>
    </string-array>
    <string-array name="res_distance">
        <item>1.4 miles</item>
        <item>1.5 miles</item>
        <item>2 miles</item>
    </string-array>
    <string-array name="res_elevation">
        <item>990 ft</item>
        <item>600 ft</item>
        <item>300 ft</item>
    </string-array>
    <string-array name="res_terrain">
        <item>Stairs</item>
        <item>Dirt Trail, Muddy</item>
        <item>Paved Path</item>
    </string-array>
</resources>