<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dim">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_hikes_by"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                />

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="callVisitors"
                android:text="@string/visitor"
                android:textSize="22sp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="callResidents"
                android:text="@string/resident"
                android:textSize="22sp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="callDistance"
                android:text="@string/distance"
                android:textSize="22sp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="callDifficulty"
                android:text="@string/difficulty"
                android:textSize="22sp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>