<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/milestoneInfo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/milestoneDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:paddingLeft="20sp"
            android:paddingTop="20sp"
            android:paddingRight="20sp"
            android:text="@string/textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            app:fontFamily="sans-serif-medium" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:maxHeight="20dip"
            android:minHeight="20dip" />

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/test"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/swipe_to_view"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>


